# EvoLite

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml  temp.py
.github/workflows/: docs.yml
api/: index.html
benchmarking/: index.html
changelog/: index.html
contributing/: index.html
docs/: api.md  benchmarking.md  changelog.md  examples.md  index.md  installation.md  quickstart.md
examples/: index.html
installation/: index.html
quickstart/: index.html
search/: search_index.json
src/evolite/: __init.py  __init__.py
src/evolite/compression/: pruning.py
src/evolite/compression/pytorch/: pruning.py
src/evolite/core/: compression.py  evolite.py  evolution.py
src/evolite/models/: neural_net.py
src/evolite/utils/: model_utils.py  utils.py  validation.py
tests/: conftest.py  test_compression.py  test_core.py  test_evolution.py  test_helpers.py  test_model_utils.py  test_neural_net.py  test_prunning.py  test_validation.py  utils.py
tests/pytorch/: test_pytorch_pruning.py
